# aimo-sampler

./: .gitignore  README.md  aimo.bat  pyproject.toml  requirements.txt  start.bat
config/: settings.yaml
docs/: CONFIGURATION.md  GETTING_STARTED.md  PROMPT_GUIDE.md
output/: .gitkeep
src/: __init__.py  __main__.py  cli.py
src/audio/: __init__.py  export.py  processor.py
src/core/: __init__.py  config.py  generator.py  model_manager.py  prompt_processor.py
